--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <title>facebook signup page</title>
@@ -7,6 +7,31 @@
 <body>
     <header>
         <div class="header-block"></div>
+        <div class="control-align">
+        <div class="img-control">
+            <img src="images/fb.png"/>
+        </div>
+            <div class="login">
+                <table>
+                    <tr>
+                        <td>
+                            <td>Email or Phone</td>
+                            <td>Password</td>
+                        </td>
+                    </tr>
+                        <tr>
+                            <td><input type="text" class="inputtxt"/></td>
+                            <td><input type="password" class="inputtxt"/></td>
+                            <td><input type="button" class="btn" value="log In"/></td>
+                        </tr>  
+                    <tr>
+                        <td>&nbsp;</td>
+                        <td><p></p><a href="#">forgot password</a></td>
+                    </tr> 
+                </table>
+            </div>
+        
+        </div>
     </header>
 </body>
 </html>
